Hard code taxes with an enum class

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Mango</string>
+
+    <string name="federal_tax">Federal tax</string>
+    <string name="medicare">Medicare</string>
+    <string name="social_security">Social security</string>
 </resources>
